fix scrollbar color

--- a/src/index.less
+++ b/src/index.less
@@ -131,6 +131,10 @@ code {
   padding-bottom: 3px !important;
 }
 
+.rcs-inner-handle {
+  background-color: rgba(0,0,0,0.3) !important;
+}
+
 body.dark-mode {
   color: #e5e5e5;
   --backgroung-color: #1b1b1b;
